# quoteapi

./: .gitignore  Dockerfile  manage.py  pyproject.toml  readme.md  run.sh
quoteapi/: asgi.py  settings.py  urls.py  wsgi.py
quotefetch/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
quotefetch/migrations/: 0001_initial.py  0002_alter_quote_user.py
quotefetch/tests/: test_quotes.py
quotefetch/tests/fixtures/: dummyjson.json  zenquotes.json
